--- a/add-question.html
+++ b/add-question.html
@@ -58,13 +58,18 @@
 
     <div id="list" class="cards"></div>
 
+    <script src="configuration.js"></script>
     <script>
-      let host = "http://localhost:8080";
+      let host = getHost();
       let questions = [];
       displayTheQuestions();
 
       async function getAll() {
-        let response = await fetch(host + "/questions");
+        let response = await fetch(host + "/questions", {
+          headers: {
+            Authorization: `Bearer ${configuration.token()}`
+          }
+        });
         let result = await response.json();
         return result;
       }
@@ -82,7 +87,7 @@
           div.className = "card";
           let innerHtml = `
          
-        <img src="http://localhost:8080/questions/${question.id}/image" alt="question" style="width:100%">
+        <img src="${URL.createObjectURL(await getTheImage(question.id))}" alt="question" style="width:100%">
         <div class="container">
           <h4><b>${question.id}</b></h4> 
           <p>${question.description}</p>
@@ -133,6 +138,7 @@
           method: "POST",
           headers: {
             "Content-Type": "application/json",
+            Authorization: `Bearer ${configuration.token()}`,
           },
           body: JSON.stringify(question),
         };
