--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="navbar.css" />
   </head>
 
   <body>
@@ -15,7 +15,6 @@
       <li><a href="take-a-quiz.html">Take a quiz</a></li>
       <li class="right"><a href="login.html">Login</a></li>
     </ul>
-
-   
+    <script src="configuration.js"></script>
   </body>
 </html>
